--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/styles/global.styled.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+    // "lib/server/config/connectDB.ts"
+  ],
   "exclude": ["node_modules"]
 }
