--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
+    "next-auth": "^4.23.1",
     "next-connect": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
     "typescript": "5.1.6"
   }
