--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0"
   }
 }
