--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 # next env
 NEXT_PUBLIC_ENV=http://localhost:3000
 
+# next-auth
+NEXTAUTH_SECRET=a47153e768c2266200fae2a6ef1f0de8
+
+
 
 
 # database
