--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "git-push": "git add . && git commit -m 'update' && git push"
   },
   "dependencies": {
     "@next/font": "13.4.12",
@@ -18,11 +19,13 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.12",
     "next-auth": "^4.23.1",
     "next-connect": "^1.0.0",
@@ -35,6 +38,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0"
+    "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7"
   }
 }
