--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "git-push": "git add . && git commit -m 'update' && git push"
+    "upload": "git add . && git commit -m 'update' && git push"
   },
   "dependencies": {
     "@next/font": "13.4.12",
@@ -22,6 +22,7 @@
     "cloudinary": "^1.40.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "hamburger-react": "^2.5.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
@@ -32,6 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.11.0",
     "react-redux": "^8.1.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.5",
