--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "@types/react-slick": "^0.23.10"
   }
 }
