--- a/.env
+++ b/.env
@@ -34,7 +34,8 @@ NAVER_CLIENT_SECRET=DOksFWtgMb
 # database
 USERNAME=hsw7308
 PASSWORD=bHWjMiPTh1Y8Kd1g
-MONGODB_URI=mongodb+srv://hsw7308:bHWjMiPTh1Y8Kd1g@next-commerce-app.q0izupa.mongodb.net/?retryWrites=true&w=majority
+# MONGODB_URI=mongodb+srv://hsw7308:bHWjMiPTh1Y8Kd1g@next-commerce-app.q0izupa.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://youser0:ME6DDD73PmZqIjJj@youserstackcluster0.krrhano.mongodb.net/?retryWrites=true&w=majority
 
 # cloudinary
 CLOUD_NAME=dzktdrw7o
