--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # next env
-# NEXT_PUBLIC_ENV=http://localhost:3000
-NEXT_PUBLIC_ENV=https://next-commerce-7zidxgmsp-hansungwoo7308.vercel.app/
+NEXT_PUBLIC_ENV=http://localhost:3000
+# NEXT_PUBLIC_ENV=https://next-commerce-7zidxgmsp-hansungwoo7308.vercel.app/
 
 
 
