--- a/.env
+++ b/.env
@@ -23,11 +23,11 @@ REFRESH_TOKEN_SECRET=1a72236babcbb65672efd240f43d33f9b34e174612354020c1b24c6ff95
 # auth with next-auth library
 NEXTAUTH_SECRET=a47153e768c2266200fae2a6ef1f0de8
 
-NAVER_CLIENT_ID=YMh33paO1KOQK7EM4wGl
-NAVER_CLIENT_SECRET=DOksFWtgMb
+# NAVER_CLIENT_ID=YMh33paO1KOQK7EM4wGl
+# NAVER_CLIENT_SECRET=DOksFWtgMb
 
-NAVER_CLIENT_ID_LOCAL=NjqkYBCyGrm7WhYtfvFU
-NAVER_CLIENT_SECRET_LOCAL=fM_GunFITs
+NAVER_CLIENT_ID=NjqkYBCyGrm7WhYtfvFU
+NAVER_CLIENT_SECRET=fM_GunFITs
 
 
 
