--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,9 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "src/styles/*.ts"
+
     // "src/pages/api/auth/index.ts" // "lib/server/config/connectDB.ts"
   ],
   "exclude": ["node_modules"]
