--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.5",
+    "swr": "^2.2.4",
     "typescript": "5.1.6"
   },
   "devDependencies": {
