--- a/.env
+++ b/.env
@@ -29,6 +29,10 @@ NEXTAUTH_SECRET=a47153e768c2266200fae2a6ef1f0de8
 NAVER_CLIENT_ID=YMh33paO1KOQK7EM4wGl
 NAVER_CLIENT_SECRET=DOksFWtgMb
 
+# 카카오는 클라이언트아이디가 javascript key 이고, 클라이언트시크릿은 보안설정에서 시크릿키를 생성한다.
+KAKAO_CLIENT_ID=05d87b95232caf8938ebc6c3d0b00312
+KAKAO_CLIENT_SECRET=OVfvDvYyhamMfovqI6PZ0inJnLCnVMVt
+
 
 
 
